--- a/page5.html
+++ b/page5.html
@@ -19,3 +19,21 @@
         <li style="float:right"><a class="active" href="http://acces.ens-lyon.fr/acces/thematiques/neurosciences/fichiers-1/question-reponse-1024x400-768x300.jpg/image">About</a></li>
     </ul>
     <div class="question"><img class="reponse" src="http://acces.ens-lyon.fr/acces/thematiques/neurosciences/fichiers-1/question-reponse-1024x400-768x300.jpg/image" /></div>
+    <div class="x">
+      <h1 style="text-align: left; font-family: Courier New, Monospace;">
+        Pourquoi avoir crée l'entreprise? 
+        <div class="patoi">
+        Après avoir travailler 22ans et avoir acquis l'éxperience,<br> il décide donc de crée son entreprise pour avoir une<br> autonomie sur ces descision et son temps de travail</div>
+    </div>
+    <div class="y">
+      <h1 style="text-align: left; font-family: Courier New, Monospace;">
+        Pourquoi avoir choisi ce métier?
+        <div class="patoi">
+        -Par passion<br> -Par l'ensemble d'élément qui<br> entour ce metier(materiel logiciel)<br>-Création<br>-Concevoir un système </div>
+    </div>
+    <div class="z">
+      <h1 style="text-align: left; font-family: Courier New, Monospace;">
+        Quel qualité, compétence?
+        <div class="patoi">
+          Savoir être patient, aimé résoudre des probléme, aimé rendre service au gens, carré(réfléchi et posé), être disponible, savoir se mettre en cause, ne pas être précipité, prendre son temps</div>
+    </div>
