--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
         </style>
         <br>
         <div>
-<h1 style="text-align: left; font-family: Courier New, Monospace;">
+<h1 style="color: white; text-align: left; font-family: Courier New, Monospace;">
     Comment ai-je trouvé ce stage </h1>
     <div class="moi">
    -Une connaissance qui m'a recommandé ce stage <br> -Rendue au lieux de stage pour une rencontre<br> avec le président de l'entreprise</div>
@@ -36,10 +36,11 @@
 <br>
 <br>
 <div>
-<h1 style="text-align: right; font-family: Courier New, Monospace;">
+<h1 style="color: white; text-align: right; font-family: Courier New, Monospace;">
     Où se trouve le stage </h1>
     <div class="toi">
-    -Bureau situé a Alincthun <br>-20min de distance</div>
+    -Bureau situé a Alincthun dans<br> la zone industrielle<br>-20min de distance</div>
     </div>
     </body>
 </html>
+
