--- a/page3.html
+++ b/page3.html
@@ -36,7 +36,7 @@
     <h1 style="color: white; font-family: Courier New, Monospace;">
         Personnel </h1>
         <div class="moi">
-         - President <br> 
+         - Président <br> 
          - Contrat d'alternance
         Le plus souvent </div>
     </div> 
@@ -49,4 +49,3 @@
     </div>
 </body>
 </html>
-
