--- a/page5.html
+++ b/page5.html
@@ -9,7 +9,7 @@
       <style>
         body{
             background-image: url(https://www.10wallpaper.com/wallpaper/1366x768/1711/Blue_abstract_gradient_Vector_HD_Wallpaper_1366x768.jpg);
-            background-size: 115%;
+            background-size: 110%;
             background-repeat: no-repeat;
             background-position: 0px 0px;
         }
@@ -23,7 +23,7 @@
       <h1 style="text-align: left; font-family: Courier New, Monospace;">
         Pourquoi avoir crée l'entreprise? 
         <div class="patoi">
-        Après avoir travailler 22ans et avoir acquis l'éxperience,<br> il décide donc de crée son entreprise pour avoir une<br> autonomie sur ces descision et son temps de travail</div>
+        Après avoir travailler 22ans et avoir acquis l'éxperience, il décide donc de crée son entreprise pour avoir une autonomie sur ces descision et son temps de travail</div>
     </div>
     <div class="y">
       <h1 style="text-align: left; font-family: Courier New, Monospace;">
