--- a/page3.html
+++ b/page3.html
@@ -26,7 +26,7 @@
        <div class="moi">
         - Ingénieur DevOps</div>
     </div>
-    <div>
+    <div class="ab">
     <h1 style="color: white;text-align: right; font-family: Courier New, Monospace;">
         Les missions </h1>
         <div class="toi">
@@ -40,7 +40,7 @@
          - Contrat d'alternance
         Le plus souvent </div>
     </div> 
-    <div>   
+    <div class="bc"> 
     <h1 style="color: white; text-align: right; font-family: Courier New, Monospace;">
         Les horaires </h1>
         <div class="toi">
