--- a/page2.html
+++ b/page2.html
@@ -35,12 +35,11 @@
 <br />
 <br>
 <br>
-<div>
+<div class="p">
 <h1 style="color: white; text-align: right; font-family: Courier New, Monospace;">
     Où se trouve le stage </h1>
     <div class="toi">
     -Bureau situé a Alincthun dans<br> la zone industrielle<br>-20min de distance</div>
-    </div>
+</div>
     </body>
 </html>
-
