--- a/page5.html
+++ b/page5.html
@@ -37,3 +37,5 @@
         <div class="patoi">
           Savoir être patient, aimé résoudre des probléme, aimé rendre service au gens, carré(réfléchi et posé), être disponible, savoir se mettre en cause, ne pas être précipité, prendre son temps</div>
     </div>
+  </body>
+</html>
