--- a/page3.html
+++ b/page3.html
@@ -30,15 +30,14 @@
     <h1 style="color: white;text-align: right; font-family: Courier New, Monospace;">
         Les missions </h1>
         <div class="toi">
-         - Crée des SiteWeb<br> - Répondre a la demande des clients</div>
+         - Crée des SiteWeb<br> - Répondre à la demande des clients</div>
     </div>
     <div>
     <h1 style="color: white; font-family: Courier New, Monospace;">
         Personnel </h1>
         <div class="moi">
          - Président <br> 
-         - Contrat d'alternance
-        Le plus souvent </div>
+         - Contrat d'alternance le plus souvent </div>
     </div> 
     <div class="bc"> 
     <h1 style="color: white; text-align: right; font-family: Courier New, Monospace;">
