--- a/page3.html
+++ b/page3.html
@@ -24,7 +24,7 @@
     <h1 style="color:white; font-family: Courier New, Monospace;">
         Les métiers </h1>
        <div class="moi">
-        - Ingénieur DevOps</div>
+        - Ingénieur DevOps<br>(Ingenieur logiciel/Chef de projet)</div>
     </div>
     <div class="ab">
     <h1 style="color: white;text-align: right; font-family: Courier New, Monospace;">
