--- a/page2.html
+++ b/page2.html
@@ -1,45 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mes démarches</title>
+        <title>Heure de trou&#128491</title>
         <meta charset=" utf-8">
-        <link href="page234.css" rel="stylesheet">
+        <link href="ressource.css" rel="stylesheet">
     </head>
     <body>
-        <ul>
-          <li><a href="index.html">Acceuil</a></li>
-          <li style="float:right"><a class="active" href="https://enetpartner.fr/">About</a></li>
-        </ul>
-        <style>
-        body{
-            background-image: url(https://images8.alphacoders.com/367/thumb-1920-367019.jpg);
-            background-size: 115%;
-            background-repeat: no-repeat;
-            background-position: 0px 0px;
-        }
-        </style>
-        <br>
-        <div>   
-<h1 style="color: white; text-align: left; font-family: Courier New, Monospace;">
-    Comment ai-je trouvé ce stage </h1>
-    <div class="moi">
-   -Une connaissance qui m'a recommandé ce stage <br> -Rendue au lieux de stage pour une rencontre avec le président de l'entreprise</div>
-   </div>
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br />
-<br>
-<br>
-<div class="p">
-<h1 style="color: white; text-align: right; font-family: Courier New, Monospace;">
-    Où se trouve le stage </h1>
-    <div class="toi">
-    -Bureau situé à Alincthun dans<br> la zone industrielle<br>-20min de distance</div>
-</div>
-    </body>
+        <nav class="navbar background">
+            <ul class="nav-list">
+                <li><a href="PP.html">Acceuil&#128256</a></li>
+            </ul>
+            <div class="rightNav">
+                <input type="text" name="search" id="search" />
+                <button class="btn btn-sm">Search</button>
+            </div>
+        </nav>   
+  </body>
 </html>
